--- a/2. personal_health_archive/anatomy.html
+++ b/2. personal_health_archive/anatomy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="structure.css">
+    <link rel="stylesheet" href="anatomy.css">
     <title>Anatomy</title>
 </head>
 <body>
@@ -18,5 +19,10 @@
             <span><a href="my_archive.html">personal archive</a></span>
         </div>
     </nav>
+    <figure>
+        <div class="anatomy">
+            <img src="image/anatomy/anatomy.jpg">
+        </div>
+    </figure>
 </body>
 </html>
