--- a/2. personal_health_archive/posture.html
+++ b/2. personal_health_archive/posture.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="structure.css">
+    <link rel="stylesheet" href="posture.css">
     <title>Posture</title>
 </head>
 <body>
@@ -18,5 +19,13 @@
             <span><a href="my_archive.html">personal archive</a></span>
         </div>
     </nav>
+    <article>
+        <img src="image/posture/bench_press.jpg">
+        <p>벤치프레스는 누운 상태에서 가슴의 근육으로 덤벨을 위로 올렸다 내렸다 하는 운동이다.</p>
+        <img src="image/posture/let_pull_down.jpg">
+        <p>렛 풀 다운은 등 쪽 근육으로 바를 당겼다 내렸다 하는 운동이다.</p>
+        <img src="image/posture/dead_lift.jpg">
+        <p>데드리프트는 등 쪽 근육을 위주로 사용한다. 다리를 구부린 상태에서 덤벨을 들어올려 일어선 자세로 만든다.</p>
+    </article>
 </body>
 </html>
