--- a/2. personal_health_archive/anatomy.html
+++ b/2. personal_health_archive/anatomy.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="structure.css">
     <link rel="stylesheet" href="anatomy.css">
+    <link rel="stylesheet" href="./node_modules/three-dots/dist/three-dots.css">
     <title>Anatomy</title>
 </head>
 <body>
@@ -20,6 +21,9 @@
         </div>
     </nav>
     <figure>
+        <div class="dot-elastic">
+        </div>
+        <span>Loading...</span>
         <div class="anatomy">
             <img src="image/anatomy/anatomy.jpg">
         </div>
