--- a/2. personal_health_archive/main.html
+++ b/2. personal_health_archive/main.html
@@ -22,26 +22,26 @@
     <figure>
         <div class="imageSlide">
             <div class="imageList">
-                <img src="image/main/3.png" class="img1">
-                <img src="image/main/0.png" class="img2">
-                <img src="image/main/1.png" class="img3">
+                <img src="image/main/3.jpg" class="img1">
+                <img src="image/main/0.jpg" class="img2">
+                <img src="image/main/1.jpg" class="img3">
             </div>
-            <img src="image/main/leftbutton.png" class="leftbutton">
-            <img src="image/main/rightbutton.png" class="rightbutton">
+            <img src="image/main/leftbutton.jpg" class="leftbutton">
+            <img src="image/main/rightbutton.jpg" class="rightbutton">
         </div>
     </figure>
     <article>
         <div>
-            <h1>A</h1>
-            aaaaaaaa
+            <h1>기록</h1>
+            <p>이 사이트는 개인적으로 운동 결과를 기록하기 위해 만들어진 사이트입니다. 현재는 간단한 프로토타입으로 제작되었으나, 차후에 더욱 컨텐츠가 추가될 예정입니다.</p>
         </div>
         <div>
-            <h1>B</h1>
-            bbbbbbbbb
+            <h1>그래프</h1>
+            <p>personal archive 항목에는 개인 3대 측정 기록을 "차트 형식"으로 저장하였습니다.</p>
         </div>
         <div>
-            <h1>C</h1>
-            ccccccccc
+            <h1>관심</h1>
+            <p>운동만 하면 재미없잖아요? 개발과 함께 하자고요!</p>
         </div>
     </article>
     <script src="imageSlide.js"></script>
