--- a/2. personal_health_archive/my_archive.html
+++ b/2. personal_health_archive/my_archive.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="structure.css">
+    <link rel="stylesheet" href="my_archive.css">
     <title>My Archive</title>
 </head>
 <body>
@@ -18,5 +19,12 @@
             <span><a href="my_archive.html">personal archive</a></span>
         </div>
     </nav>
+    <figure>
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
+    </figure>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="my_archive_chart.js"></script>      
 </body>
 </html>
